fix: z-index form

--- a/public/scss/pages/_auth.scss
+++ b/public/scss/pages/_auth.scss
@@ -1,5 +1,3 @@
-
-
 .container {
   position: relative;
   width: 100%;
@@ -101,7 +99,7 @@ form {
   }
 
   &.sign-in-form {
-    z-index: 2;
+    z-index: 3;
   }
 }
 
@@ -265,7 +263,6 @@ form {
     min-height: 800px;
     height: 100vh;
 
-
     &:before {
       width: 1500px;
       height: 1500px;
@@ -285,7 +282,6 @@ form {
       }
 
       .left-panel {
-        
         .image,
         .content {
           transform: translateY(-300px);
@@ -304,7 +300,6 @@ form {
         transform: translate(-25%, 0);
       }
     }
-    
   }
 
   .signin-signup {
